--- a/common/package.json
+++ b/common/package.json
@@ -2,14 +2,15 @@
   "name": "@dlc-k8s-test/common",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "del ./build/*"
   },
-  "files": [
-    "build/**/*"
-  ],
   "keywords": [],
   "author": "danilucaci@gmail.com",
   "license": "MIT",
