--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlc-k8s-test/common",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "common utils for my microservices course",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -22,5 +22,14 @@
   "devDependencies": {
     "del-cli": "^4.0.1",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.43",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
