--- a/auth/package.json
+++ b/auth/package.json
@@ -18,6 +18,7 @@
   "author": "Dani Lucaci <hello@danilucaci.com> (https://www.danilucaci.com/)",
   "license": "MIT",
   "dependencies": {
+    "@dlc-k8s-test/common": "0.0.5",
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
@@ -32,6 +33,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.1",
     "@types/jest": "^26.0.24",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
