--- a/tickets/.dockerignore
+++ b/tickets/.dockerignore
@@ -9,8 +9,6 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-build
-
 # Runtime data
 pids
 *.pid
@@ -40,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules
+node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -104,4 +102,3 @@ dist
 
 # TernJS port file
 .tern-port
-common/.gitignore
