--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlc-k8s-test/common",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "common utils for my microservices course",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -30,6 +30,7 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "node-nats-streaming": "^0.3.2"
   }
 }
