--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "Dani Lucaci <hello@danilucaci.com> (https://www.danilucaci.com/)",
   "license": "MIT",
   "dependencies": {
-    "@dlc-k8s-test/common": "0.0.5",
+    "@dlc-k8s-test/common": "^0.0.7",
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
@@ -29,7 +29,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3",
+    "mongoose": "^5.13.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   },
@@ -38,7 +38,7 @@
     "@types/jest": "^26.0.24",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
-    "mongodb-memory-server": "^7.3.2",
+    "mongodb-memory-server": "^7.3.4",
     "supertest": "^6.1.4",
     "ts-jest": "^27.0.4"
   }
